--- a/src/concesionaria/backend/daos/impl/sentencia/auto.properties
+++ b/src/concesionaria/backend/daos/impl/sentencia/auto.properties
@@ -1,5 +1,5 @@
 COMPLETO=SELECT auto.*,CONCAT(cliente.apellido,' ',cliente.nombre)from auto INNER JOIN CLIENTE ON  auto.cliente_idcliente=cliente.idcliente order by idauto
-SELECCION=SELECT  auto.*,CONCAT(cliente.apellido,' ',cliente.nombre)FROM servicio JOIN auto ON servicio.auto_idauto = auto.idauto INNER JOIN CLIENTE ON  auto.cliente_idcliente=cliente.idcliente WHERE  YEAR(NOW()) - auto.anio < 4 group by auto_idauto having count(*)=1
+SELECCION=SELECT  auto.*,CONCAT(cliente.apellido,' ',cliente.nombre)FROM servicio JOIN auto ON servicio.auto_idauto = auto.idauto INNER JOIN CLIENTE ON  auto.cliente_idcliente=cliente.idcliente WHERE  YEAR(NOW()) - auto.anio > 3 group by auto_idauto having count(*)=1
 PATENTE=SELECT auto.*,CONCAT(cliente.apellido,' ',cliente.nombre)from auto INNER JOIN CLIENTE ON  auto.cliente_idcliente=cliente.idcliente ORDER BY PATENTE
 APELLIDO=SELECT auto.*,CONCAT(cliente.apellido,' ',cliente.nombre)from auto INNER JOIN CLIENTE ON  auto.cliente_idcliente=cliente.idcliente ORDER BY CONCAT(cliente.apellido,' ',cliente.nombre)
 ANTIG=SELECT auto.*,CONCAT(cliente.apellido,' ',cliente.nombre)from auto INNER JOIN CLIENTE ON  auto.cliente_idcliente=cliente.idcliente ORDER BY anio
